--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <p class="description">Now, start drawing</p>
     <canvas id="draw" width="800" height="800"></canvas>
     
     <div class="description">
